# cpp_ml

./: .gitignore  README
OpenCV/display_image/: CMakeLists.txt  DisplayImage.cpp
eg1/mnist_tf/: main.py  save_jpg.py
failed/OpenCV/display_image/: DisplayImage
failed/eg1/: main.py
failed/eg1/cppflow/: main.cpp
failed/eg1/mnist_tf/: mnist_tf.py
failed/eg1/mnist_tf/saved_model/variables/: variables.data-00000-of-00001  variables.index
failed/eg1/model/variables/: variables.data-00000-of-00001  variables.index
failed/eg1/temp/: main.cpp  main.py
failed/eg1/temp/model/variables/: variables.data-00000-of-00001  variables.index
failed/mnist/: main.cpp  mnist_np.py  save_jpg.py
failed/mnist/model/variables/: variables.index
linux/failed/eg1/mnist_tf/: .save_jpg.py.swp  save_tensor.py
linux/onnx/cifar/c++/src/: image_classifier.cpp  main.cpp
linux/onnx/mnist/c++/: CMakeLists.txt
linux/onnx/mnist/c++/src/: main.cpp
linux/onnx/mnist/tensorflow/: export2onnx.py  train.py
linux/onnx/unet/c++/src/: Unet.cpp  main.cpp
mnist/: mnist.py
onnx/c++/: CMakeLists.txt
onnx/c++/src/: image_classifier.cpp  main.cpp
onnx/cifar/pytorch/models/: image_classifier.onnx.backup
onnx/mnist/c++/src/: mnist_classifier.cpp  mnist_classifier.h
onnx/pytorch/: export2onnx.py  main.py  model.py  test.py  train.py
onnx/unet/c++/: CMakeLists.txt
onnx/unet/c++/src/: Unet.cpp  Unet.h  main.cpp
onnx/unet/tf/: dicom2binary.py  export2onnx.py  rc2mu.py  temp.py
tfCapi/tensor/: main.cpp
windows/: README
windows/libML/: Helpers.h  Model.h  SpectUnet.cpp  SpectUnet.h  Tensor.cpp  Tensor.h  libML.vcxproj  libML.vcxproj.filters
windows/ml-inference/: Helpers.cpp  Helpers.h  SpectUnet.cpp  SpectUnet.h  main.cpp  ml-inference.sln  ml-inference.vcxproj  ml-inference.vcxproj.filters  packages.config
windows/ml-inference/libML/: Helpers.h  Model.h  libML.cpp  libML.vcxproj  libML.vcxproj.filters  resource.h
windows/temp/: Source.cpp  temp.vcxproj
